Changes for tpop3d
$Id$

1.5.1

tpop3d now supports the WHOSON protocol (http://whoson.sourceforge.net) for
POP-before-SMTP relaying, thanks to Arkadiusz Miski. Added support for `mass
virtual hosting', where the domain name used for a connection is based upon
the name associated with the address to which a client connects. Made a small
change to the documentation to make it clearer.

1.4.2

tpop3d now accepts passwords containing spaces. auth-pam now passes the client
host information to the authentication stack. A fix to the logging code to work
around PAM brokenness was made. A memory leak in auth-ldap was fixed. The
amount of data transferred to/from the client is recorded. Fixed some bugs
which caused crashes on old versions of Solaris.

Added support for authentication against /etc/passwd-style flat text files,
contributed by Angel Marin. Added configuration-file options equivalent to
the -d command-line switch. Added support for notification of a DRAC server for
POP-before-SMTP relaying. Added support for the $(serverhost) substitution
variable in certain authenticators, thanks to Matthew Reimer.

1.4.1

Hooks for POP-before-SMTP relaying support were implemented in tpop3d, and
support for same in TPOP3D::AuthDriver.

Incorporated LDAP support by Sebastien Thomas. The internal semantics of
authentication were changed slightly.

Added the option to ignore a domain name supplied by a user, based upon code
supplied by Dom Gallagher.

The facility as which tpop3d logs messages may now be changed from the
configuration file.

A serious bug in TPOP3D::AuthDriver which affected operation under
auth-other was corrected. Fixed the behaviour of STAT after DELE. A bug in the
experimental BSD metadata cache code was fixed. A memory leak in the stringmap
code which affected auth-perl and auth-other was fixed. Fixed a reference
counting problem which could cause auth-perl's perl interpreter to leak
memory. Added some notes to tpop3d.conf(5) on memory and resource leaks.
