@@ -7,7 +7,8 @@ tpop3d now supports the WHOSON protocol (http://whoson.sourceforge.net) for
 POP-before-SMTP relaying, thanks to Arkadiusz Miski. Added support for `mass
 virtual hosting', where the domain name used for a connection is based upon
 the name associated with the address to which a client connects. Made a small
-change to the documentation to make it clearer.
+change to the documentation to make it clearer. tpop3d now obeys configure's
+--sysconfdir option.
 
 1.4.2
 
